[metadata]
name = conformalizer
version = 0.1
author = Carlos Sisto
author_email = carlosmiguel.sisto@gmail.com
description = A package to compute conformal predictions for regression and classification
url = https://github.com/carlossisto12/conformalizer
classifiers = 
    Programming Language :: Python :: 3
    
[options]
packages=find:
python_requires = >=3.6
install_requires =
    numpy>=1.19
    pandas>=1.0
    scikit-learn>=1.0
    xgboost==1.6.0
    statsmodels~=0.13
include_package_data = True

[options.packages.find]
include =
    conformalizer*
